Fix layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -221,6 +221,7 @@ main {
 
 .current-weather-main {
   font-weight: bold;
+  font-size: 0.7rem;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 5;
@@ -228,6 +229,7 @@ main {
 }
 
 .current-weather-description {
+  font-size: 0.7rem;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 6;
@@ -242,7 +244,7 @@ main {
 
   display: flex;
   align-items: center;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   justify-content: flex-start;
   gap: 10px;
   padding-left: 20px;
@@ -257,7 +259,7 @@ main {
 
   display: flex;
   align-items: center;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   justify-content: flex-start;
   gap: 10px;
   padding-left: 20px;
@@ -265,7 +267,7 @@ main {
 }
 
 .small-icon {
-  height: 30px;
+  height: 20px;
 }
 
 .date-info {
@@ -325,7 +327,7 @@ main {
   grid-row-end: 5;
 
   flex-direction: column;
-  /* justify-content: flex-start; */
+  justify-content: flex-start;
   /* gap: 10px; */
 }
 
@@ -353,8 +355,8 @@ p {
 
 #map {
   height: 100%;
-  width: 285px;
-  /* flex: 1; */
+  /* width: 285px; */
+  flex: 1;
   border-radius: 20px;
   opacity: 50%;
   border: none;
